@@ -22,7 +22,7 @@
         "activeTab",
         "storage"
     ],
-    "version": "0.8.8",
+    "version": "0.9.0",
     "manifest_version": 2,
     "options_ui": {
         "page": "options.html",
