@@ -1,6 +1,6 @@
 {
   "name": "mediathread-chrome",
-  "version": "0.8.8",
+  "version": "0.9.0",
   "description": "Find assets to analyze in Mediathread.",
   "main": "background.js",
   "directories": {
