@@ -1,3 +1,8 @@
+2016-02-16  Nik Nyby  <nnyby@columbia.edu>
+
+	* Host URL can now be set to anything in the
+	extension options.
+
 2016-01-21  Nik Nyby  <nnyby@columbia.edu>
 
 	* Fix Vimeo asset collection bug.
